compiler/acton/test/syntaxerrors/err3.act
def f(x):
    return 2+